# anvil

./: Cargo.toml  LICENSE  readme.md
.github/workflows/: deploy.yml  integration-tests.yml  release.yml
crates/anvil-cli/: Cargo.toml
crates/anvil-cli/src/: main.rs
crates/anvil-engine/: Cargo.toml
crates/anvil-engine/src/: composition.rs  config.rs  engine.rs  error.rs  generator.rs  lib.rs
crates/anvil-engine/tests/: integration_test.rs  performance_benchmark.rs  simple_integration.rs  subset_integration.rs
crates/anvil-engine/tests/integration/: build_verification.rs  mod.rs  service_compatibility.rs  shared_components.rs  template_generation.rs
templates/fullstack-saas/: README.md.tera  anvil.yaml  next.config.js.tera  package.json.tera  tailwind.config.ts.tera
templates/fullstack-saas/app/: globals.css.tera  layout.tsx.tera  page.tsx.tera
templates/fullstack-saas/components/: providers.tsx.tera
templates/go-cli-tool/: anvil.yaml  go.mod.tera  main.go.tera
templates/go-cli-tool/cmd/: root.go.tera
templates/rust-hello-world/: Cargo.toml.tera  README.md.tera  anvil.yaml
templates/rust-hello-world/src/: main.rs.tera
templates/rust-web-api/: Cargo.toml.tera  anvil.yaml
templates/rust-web-api/src/: main.rs.tera
templates/shared/ai/claude/: anvil.yaml
templates/shared/ai/openai/: anvil.yaml
templates/shared/ai/openai/components/ai/: chat.tsx.tera
templates/shared/ai/openai/lib/: openai.ts.tera
templates/shared/api/graphql/: anvil.yaml  codegen.yml.tera
templates/shared/api/rest/: anvil.yaml
templates/shared/api/trpc/: anvil.yaml
templates/shared/api/trpc/server/: trpc.ts.tera
templates/shared/auth/auth0/: anvil.yaml  middleware.ts.tera
templates/shared/auth/auth0/lib/: auth-config.ts.tera  auth-utils.ts.tera
templates/shared/auth/clerk/: anvil.yaml  middleware.ts.tera
templates/shared/auth/clerk/lib/: auth-config.ts.tera  auth-utils.ts.tera  clerk-setup.ts.tera  project-info.ts.tera
templates/shared/auth/firebase/: anvil.yaml
templates/shared/auth/firebase/lib/: firebase-admin.ts.tera  firebase-client.ts.tera
templates/shared/auth/none/: anvil.yaml
templates/shared/auth/none/lib/: auth-placeholder.ts.tera
templates/shared/auth/supabase/: anvil.yaml
templates/shared/auth/supabase/hooks/: use-auth.ts.tera
templates/shared/auth/supabase/lib/: supabase-client.ts.tera  supabase-server.ts.tera
templates/shared/database/mongodb/: anvil.yaml
templates/shared/database/mongodb/models/: index.ts.tera
templates/shared/database/neon/: anvil.yaml  drizzle.config.ts.tera
templates/shared/database/neon/lib/: db.ts.tera  schema.ts.tera
templates/shared/database/none/: anvil.yaml
templates/shared/database/none/lib/: database-placeholder.ts.tera
templates/shared/database/supabase/: anvil.yaml
templates/shared/database/supabase/lib/: database-types.ts.tera  supabase-db.ts.tera
templates/shared/database/supabase/sql/: schema.sql.tera
templates/shared/deployment/docker/: anvil.yaml
templates/shared/deployment/railway/: anvil.yaml
templates/shared/deployment/vercel/: .env.example.tera  anvil.yaml  vercel.json.tera
templates/shared/monitoring/sentry/: anvil.yaml  sentry.client.config.ts.tera  sentry.edge.config.ts.tera
templates/shared/monitoring/sentry/lib/: monitoring.ts.tera
templates/shared/payments/stripe/: anvil.yaml
templates/shared/payments/stripe/lib/: stripe.ts.tera
web/: next.config.ts
web/src/app/: globals.css  layout.tsx  page.tsx
web/src/components/: NavBar.tsx
(+41 files in other folders)
